Curses added to The Uma